0030176: Modeling Algorithms - Infinite loop in IntWalk_PWalking::Perform()

Currently resetting of counter LevelOfIterWithoutAppend is enabled only if additional iterations have taken some positive effect.